--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,8 @@
 			
 		</style>
 		<script src="./client/cookie.js"></script>
-		<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script>
+
 		
 	</head>
 	
